--- a/src/assets/sass/resets.scss
+++ b/src/assets/sass/resets.scss
@@ -5,6 +5,7 @@
 */
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+@import '~_node_modules/bootstrap/scss/bootstrap.scss';
 
 *,
 *:before,
