--- a/src/assets/sass/_resets.scss
+++ b/src/assets/sass/_resets.scss
@@ -5,6 +5,7 @@
 */
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400,700');
+@import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 @import '~_node_modules/bootstrap/scss/bootstrap.scss';
 
 *,
