Game style and grid done

--- a/src/assets/sass/_config.scss
+++ b/src/assets/sass/_config.scss
@@ -13,7 +13,11 @@ $secondary-color: #7d7a7a;
 $tertiary-color: #ececec;
 $quaternary-color:  #ced4da;
 
+//background
+$background-color: rgba(0, 0, 0, 0.8);
+
 //fonts
 $font-size-default: 14px;
+$font-size-small: 12px;
 $font-size-medium: 16px;
 $font-size-big: 18x;
